JSW Devsb/src/objects/Ship_To_Party__c.object
<CustomObject>
    <fields>
        <fullName>Account_Group__c</fullName>
        <label>Account Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ship To Party</relationshipLabel>
        <relationshipName>Ship_To_Party</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Code__c</fullName>
        <label>City Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Name__c</fullName>
        <label>City Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code_Data__c</fullName>
        <label>Company Code Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Person_1__c</fullName>
        <label>Contact Person 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Person_2__c</fullName>
        <label>Contract Person 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Stas_Grp__c</fullName>
        <label>Cust Stas.Grp.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <externalId>true</externalId>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Grp__c</fullName>
        <label>Customer Grp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_No_Bussiness__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Pricing_Proc__c</fullName>
        <label>Customer Pricing  Proc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Plant__c</fullName>
        <label>Delivery Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Priority__c</fullName>
        <label>Delivery Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name1__c</fullName>
        <label>Name1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name2__c</fullName>
        <label>Name2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name3__c</fullName>
        <label>Name3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_terms__c</fullName>
        <label>Payment terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pincode__c</fullName>
        <label>Pincode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_Group__c</fullName>
        <label>Pricing Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recon_Account__c</fullName>
        <label>Recon Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Code_Shipping__c</fullName>
        <label>SAP Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATE_TEXT__c</fullName>
        <label>STATE TEXT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area_Data__c</fullName>
        <label>Sales Area Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District__c</fullName>
        <label>Sales District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District_text__c</fullName>
        <label>Sales District text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Group__c</fullName>
        <label>Sales Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Group_text__c</fullName>
        <label>Sales Group text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <label>Sales Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office_text__c</fullName>
        <label>Sales Office text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Condition__c</fullName>
        <label>Shipping Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_to_Code__c</fullName>
        <label>Sold to Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street3__c</fullName>
        <label>Street3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <label>Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_number__c</fullName>
        <label>Tax number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Teliphone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ship To Party</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Customer_Code__c</columns>
        <columns>Account_Group__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Sold_to_Code__c</columns>
        <columns>District__c</columns>
        <columns>Account__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Last_15_days_Ship_to_Party</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Group__c</columns>
        <columns>City_Name__c</columns>
        <columns>Company_Code__c</columns>
        <columns>Customer_Code__c</columns>
        <columns>Customer_Grp__c</columns>
        <columns>Customer_No_Bussiness__c</columns>
        <columns>Cust_Stas_Grp__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:15</value>
        </filters>
        <label>Last 15 days Ship to Party</label>
    </listViews>
    <listViews>
        <fullName>Last_30_days_Ship_to_Party</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Group__c</columns>
        <columns>Company_Code__c</columns>
        <columns>Customer_Code__c</columns>
        <columns>Customer_No_Bussiness__c</columns>
        <columns>Customer_Pricing_Proc__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Last 30 days Ship to Party</label>
    </listViews>
    <listViews>
        <fullName>Last_7_days_Ship_to_Party</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Group__c</columns>
        <columns>City_Name__c</columns>
        <columns>Customer_Code__c</columns>
        <columns>Customer_No_Bussiness__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Last 7 days Ship to Party</label>
    </listViews>
    <nameField>
        <label>Ship To Party Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ship To Party</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Company_Code</fullName>
        <active>true</active>
        <errorConditionFormula>Company_Code__c  &lt;&gt; 3000</errorConditionFormula>
        <errorDisplayField>Company_Code__c</errorDisplayField>
        <errorMessage>Company Code Default value is 3000</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAP_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>IF(  SAP_Code_Shipping__c   &lt;&gt; null, OR(LEN(  SAP_Code_Shipping__c ) &lt;&gt; 10, NOT(BEGINS( SAP_Code_Shipping__c , &apos;AP&apos;) ), NOT(ISNUMBER( RIGHT( SAP_Code_Shipping__c , 8)))),null)</errorConditionFormula>
        <errorDisplayField>SAP_Code_Shipping__c</errorDisplayField>
        <errorMessage>SAP Code Should contain 10 Alphanumeric Values Starting with &quot;AP&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Org</fullName>
        <active>true</active>
        <errorConditionFormula>VALUE(Sales_Org__c  )&lt;&gt; 3000</errorConditionFormula>
        <errorDisplayField>Sales_Org__c</errorDisplayField>
        <errorMessage>Sales Org Default value is 3000</errorMessage>
    </validationRules>
</CustomObject>